:lipstick: fix: correct primary color value in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --color-font-poppins: 'Poppins', sans-serif;
 
   /* Colors */
-  --color-primary-100: #1570EF;
+  --color-primary-100: #0F62FE;
   --color-primary-300: #013275;
   --color-primary-500: #04214a;
   --color-primary-700: #050A24;
